--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     -->
     <!-- Includ your css file here-->
-    <link rel="stylesheet" href="css/stayle.css">
+    <link rel="stylesheet" href="stayle.css">
 </head>
 <body>
     <header>
